# voxelizer

./: .gitignore  CMakeLists.txt
include/: GLCommon.h  Model.h  PointSet.h  Shader.h  Trackball.h  Transform.h  Triangle.h  Types.h  Utils.h  Voxelizer.h
src/: GLCommon.cpp  Model.cpp  PointSet.cpp  Shader.cpp  Triangle.cpp  Utils.cpp  Voxelizer.cpp  main.cpp
src/shaders/: basic.frag  basic.geom  basic.vert
